# thread-pool

./: .clang-format  .clang-uml  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_d49b65a5c30fe9de5eba05c213f8d2e1.html  dir_d49b65a5c30fe9de5eba05c213f8d2e1.js  doxygen.css  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
.github/: FUNDING.yml
.github/workflows/: codecov.yml  documentation.yaml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark/include/: utilities.h
benchmark/results/: benchmark_results_clang.md  benchmark_results_msvc.md
benchmark/source/: count_primes.cpp  main.cpp  matrix_multiplication.cpp  signal_technique.cpp  std_async.cpp  thread_pool.cpp  thread_pool_scaling.cpp
cmake/: CPM.cmake  ThreadPool-config.cmake.in  thread-pool-config.cmake.in  tools.cmake  version.h.in
d0/d48/: conceptdp_1_1detail_1_1is__valid__queue.html
d1/d78/: mandelbrot_2source_2main_8cpp-example.html
d1/db4/: thread__pool_8h__incl.dot
d3/d1b/: namespacedp_1_1details.html
d3/d4a/: thread__safe__queue_8h__dep__incl.dot
d3/dec/: thread__pool_8h.html  thread__pool_8h.js  thread__pool_8h_source.html
d4/dbf/: thread__safe__queue_8h__incl.dot
d4/dcd/: classdp_1_1thread__safe__queue-members.html
d7/d54/: classdp_1_1thread__safe__queue.html  classdp_1_1thread__safe__queue.js
d8/d15/: conceptdp_1_1is__lockable.html
d8/d6e/: classdp_1_1thread__pool.html  classdp_1_1thread__pool.js
d8/dff/: classdp_1_1thread__pool__impl.html  classdp_1_1thread__pool__impl.js
d9/d65/: classdp_1_1thread__pool__impl-members.html
d9/d9b/: namespacedp_1_1detail.html  namespacedp_1_1detail.js
d9/dd6/: _r_e_a_d_m_e_8md.html
dd/d75/: classdp_1_1thread__pool-members.html
dd/df9/: thread__safe__queue_8h.html  thread__safe__queue_8h.js  thread__safe__queue_8h_source.html
df/d88/: namespacedp.html  namespacedp.js
documentation/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/folder-size-counter/: CMakeLists.txt
examples/folder-size-counter/source/: main.cpp
examples/mandelbrot/: CMakeLists.txt  README.md
examples/mandelbrot/include/: fractal.h
examples/mandelbrot/source/: fractal.cpp  main.cpp
include/thread_pool/: native_thread.h  safe_queue.h  thread_pool.h  thread_safe_queue.h  work_stealing_deque.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  concepts_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js
standalone/: CMakeLists.txt
standalone/include/: fractal.h
standalone/source/: fractal.cpp  main.cpp
test/: CMakeLists.txt
test/source/: thread_pool.cpp  thread_safe_queue.cpp  work_stealing_deque.cpp
